--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,215 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:fillViewport="true"
-    tools:context=".MainActivity">
+    tools:viewBindingIgnore="true"
+    tools:context=".ui.MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
-
-
-        <TextView
-            android:id="@+id/tvIntro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_16sdp"
-            
-            android:paddingStart="0dp"
-            android:paddingEnd="@dimen/_25sdp"
-            android:text="@string/bmi_intro"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvBb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/berat_badan"
-        android:labelFor="@id/etBb"
-        
-        android:layout_marginTop="@dimen/_6sdp"
-        app:layout_constraintBottom_toBottomOf="@id/tilBb"
-        app:layout_constraintTop_toBottomOf="@id/tvIntro"
-        app:layout_constraintStart_toStartOf="@id/tvIntro"
-
-        />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilBb"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@id/tvIntro"
-            app:layout_constraintTop_toBottomOf="@id/tvIntro"
-            app:layout_constraintStart_toEndOf="@id/tvBb"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_16sdp"
-            android:layout_marginStart="@dimen/_16sdp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etBb"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_55sdp"
-                android:hint="@string/berat_badan_kg"
-                android:inputType="number"
-                android:autofillHints="Berat Badan" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-    <TextView
-        android:id="@+id/tvTb"
-        android:labelFor="@id/etTb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_6sdp"
-        
-        app:layout_constraintStart_toStartOf="@id/tvBb"
-        app:layout_constraintTop_toBottomOf="@id/tilBb"
-        app:layout_constraintBottom_toBottomOf="@id/tilTb"
-        android:text="@string/tinggi_badan"
-
-        />
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilTb"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp"
-            app:layout_constraintTop_toBottomOf="@id/tilBb"
-            app:layout_constraintEnd_toEndOf="@id/tilBb"
-            app:layout_constraintStart_toStartOf="@id/tilBb">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etTb"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_55sdp"
-                android:hint="@string/tinggi_badan_cm"
-                android:inputType="number"
-                android:autofillHints="Tinggi Badan" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-    <Button
-        android:id="@+id/btnHitung"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hitung"
-        android:layout_marginTop="@dimen/_16sdp"
-        
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@id/rgGender"
-        app:layout_constraintTop_toBottomOf="@id/rgGender"
-        tools:ignore="UsingOnClickInXml" />
-
-    <Button
-        android:id="@+id/btnReset"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/reset"
-        android:textColor="@color/white"
-        android:layout_marginTop="@dimen/_16sdp"
-        app:layout_constraintStart_toEndOf="@id/btnHitung"
-        app:layout_constraintTop_toBottomOf="@id/rgGender"
-        app:layout_constraintEnd_toEndOf="@id/rgGender"
-        tools:ignore="UsingOnClickInXml" />
-
-    <View
-        android:id="@+id/divider"
-        android:visibility="gone"
-        android:background="?android:listDivider"
+    <fragment
+        android:id="@+id/fragmentContainer"
         android:layout_width="0dp"
-        android:layout_height="@dimen/_1sdp"
-        android:layout_marginTop="@dimen/_16sdp"
-        android:layout_marginStart="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/_16sdp"
-        app:layout_constraintTop_toBottomOf="@id/btnHitung"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        android:name="org.d3if2146.hitungbmi.ui.SaranFragment"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-        />
-
-    <TextView
-        android:id="@+id/tvGender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/jenis_kelamin"
-        android:layout_marginTop="@dimen/_6sdp"
-        
-        app:layout_constraintStart_toStartOf="@id/tvTb"
-        app:layout_constraintBottom_toBottomOf="@id/rgGender"
-        app:layout_constraintTop_toBottomOf="@id/tilTb"
-       />
-
-    <RadioGroup
-        android:id="@+id/rgGender"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/_8sdp"
-        app:layout_constraintStart_toStartOf="@id/tilTb"
-        app:layout_constraintTop_toBottomOf="@id/tilTb"
-        app:layout_constraintEnd_toEndOf="@id/tilTb"
-        app:layout_constraintStart_toEndOf="@id/tvGender"
-        >
-
-        <RadioButton
-            android:id="@+id/rbPria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/pria" />
-
-        <RadioButton
-            android:id="@+id/rbWanita"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/wanita" />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/tvBmi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/divider"
-        android:layout_marginTop="@dimen/_32sdp"
-        android:textSize="@dimen/_14ssp"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/bmi"
-
-        />
-
-    <TextView
-        android:id="@+id/tvKategori"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/kategori"
-        android:textSize="@dimen/_14ssp"
-        android:visibility="gone"
-        android:layout_marginTop="@dimen/_8sdp"
-        app:layout_constraintTop_toBottomOf="@id/tvBmi"
-        app:layout_constraintStart_toStartOf="@id/tvBmi"
-        app:layout_constraintEnd_toEndOf="@id/tvBmi"
-
-        />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_16sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvKategori"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
