--- a/app/src/main/res/layout/fragment_saran.xml
+++ b/app/src/main/res/layout/fragment_saran.xml
@@ -21,6 +21,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:fontFamily="@font/alike"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/imageView"
