--- a/app/src/main/res/layout/fragment_hitung.xml
+++ b/app/src/main/res/layout/fragment_hitung.xml
@@ -238,8 +238,15 @@
             app:layout_constraintStart_toEndOf="@id/btnLihatSaran"
             android:layout_marginTop="20dp"/>
 
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/buttonGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="btnLihatSaran,btnBagikan"
+            tools:visibility="visible"/>
 
-        <Space
+        <androidx.legacy.widget.Space
             android:layout_width="match_parent"
             android:layout_height="@dimen/_16sdp"
             app:layout_constraintEnd_toEndOf="parent"
