--- a/app/src/main/res/layout/fragment_saran.xml
+++ b/app/src/main/res/layout/fragment_saran.xml
@@ -19,14 +19,41 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:fontFamily="@font/alike"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:text="TextView" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvBb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/berat_badan"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="@id/textView"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/tinggi_badan"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/tvBb"
+        app:layout_constraintStart_toStartOf="@id/tvBb" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvGender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/jenis_kelamin"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTb"
+        app:layout_constraintStart_toStartOf="@id/tvTb" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
