--- a/app/src/main/res/menu/saran_menu.xml
+++ b/app/src/main/res/menu/saran_menu.xml
@@ -2,8 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="@string/tentang_aplikasi"
-        android:id="@+id/menu_about"
-        app:showAsAction="never">
-    </item>
+    <item android:title="@string/menu_share"
+        android:id="@+id/menu_share"
+        app:showAsAction="never"/>
 </menu>
