--- a/app/src/main/res/layout/fragment_saran.xml
+++ b/app/src/main/res/layout/fragment_saran.xml
@@ -22,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/alike"
-        android:textSize="14sp"
+        android:textSize="16sp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/berat_badan"
+        android:textSize="16sp"
         android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layout_constraintStart_toStartOf="@id/textView"
@@ -43,6 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/tinggi_badan"
+        android:textSize="16sp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/tvBb"
         app:layout_constraintStart_toStartOf="@id/tvBb" />
@@ -51,6 +54,7 @@
         android:id="@+id/tvGender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
         android:text="@string/jenis_kelamin"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/tvTb"
