--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/hitungFragment"
-        android:name="org.d3if2146.hitungbmi.ui.HitungFragment"
+        android:name="org.d3if2146.hitungbmi.ui.hitung.HitungFragment"
         android:label="Hitung BMI"
         tools:layout="@layout/fragment_hitung" >
         <action
