Menambahkan fitur histori

--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -6,4 +6,10 @@
         android:id="@+id/menu_about"
         app:showAsAction="never">
     </item>
+    <item
+        android:id="@+id/menu_histori"
+        android:icon="@drawable/ic_baseline_history_24"
+        android:title="@string/histori"
+        app:showAsAction="ifRoom"/>
+
 </menu>
