--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_hitungFragment_to_aboutFragment"
             app:destination="@id/aboutFragment" />
+        <action
+            android:id="@+id/action_hitungFragment_to_historyFragment"
+            app:destination="@id/historyFragment" />
 
     </fragment>
     <fragment
@@ -35,5 +38,10 @@
         android:name="org.d3if2146.hitungbmi.ui.AboutFragment"
         android:label="@string/tentang_aplikasi"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="org.d3if2146.hitungbmi.ui.histori.HistoryFragment"
+        android:label="@string/histori"
+        tools:layout="@layout/fragment_history" />
 
 </navigation>
