--- a/app/src/main/res/layout/fragment_hitung.xml
+++ b/app/src/main/res/layout/fragment_hitung.xml
@@ -20,7 +20,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            
             android:paddingStart="0dp"
             android:paddingEnd="@dimen/_25sdp"
             android:text="@string/bmi_intro"
@@ -34,7 +33,6 @@
         android:layout_height="wrap_content"
         android:text="@string/berat_badan"
         android:labelFor="@id/etBb"
-        
         android:layout_marginTop="@dimen/_6sdp"
         app:layout_constraintBottom_toBottomOf="@id/tilBb"
         app:layout_constraintTop_toBottomOf="@id/tvIntro"
@@ -69,13 +67,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_6sdp"
-        
         app:layout_constraintStart_toStartOf="@id/tvBb"
         app:layout_constraintTop_toBottomOf="@id/tilBb"
         app:layout_constraintBottom_toBottomOf="@id/tilTb"
-        android:text="@string/tinggi_badan"
-
-        />
+        android:text="@string/tinggi_badan" />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -151,32 +146,15 @@
         app:layout_constraintTop_toBottomOf="@id/tilTb"
        />
 
-    <RadioGroup
+    <include
         android:id="@+id/rgGender"
+        layout="@layout/radiogroup_gender"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/_8sdp"
         app:layout_constraintStart_toStartOf="@id/tilTb"
         app:layout_constraintTop_toBottomOf="@id/tilTb"
         app:layout_constraintEnd_toEndOf="@id/tilTb"
-        app:layout_constraintStart_toEndOf="@id/tvGender"
-        >
-
-        <RadioButton
-            android:id="@+id/rbPria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/pria" />
-
-        <RadioButton
-            android:id="@+id/rbWanita"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/wanita" />
-    </RadioGroup>
+        app:layout_constraintStart_toEndOf="@id/tvGender"/>
 
     <TextView
         android:id="@+id/tvBmi"
