--- a/app/src/main/res/layout/fragment_hitung.xml
+++ b/app/src/main/res/layout/fragment_hitung.xml
@@ -139,10 +139,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/jenis_kelamin"
-        android:layout_marginTop="@dimen/_6sdp"
-        
+        android:layout_marginTop="@dimen/_16sdp"
         app:layout_constraintStart_toStartOf="@id/tvTb"
-        app:layout_constraintBottom_toBottomOf="@id/rgGender"
         app:layout_constraintTop_toBottomOf="@id/tilTb"
        />
 
@@ -152,7 +150,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/tilTb"
-        app:layout_constraintTop_toBottomOf="@id/tilTb"
+        app:layout_constraintTop_toTopOf="@id/tvGender"
+        app:layout_constraintBottom_toBottomOf="@id/tvGender"
         app:layout_constraintEnd_toEndOf="@id/tilTb"
         app:layout_constraintStart_toEndOf="@id/tvGender"/>
 
